<resources>
    <string name="app_name">ClimaAPP</string>

    <string name="asu">Asunción</string>
    <string name="cde">Ciudad del Este</string>
    <string name="enca">Encarnación</string>
    <string name="loma">Loma Plata</string>
    <string name="villa">Villarrica</string>

    <string name="Temperatura">Temperatura</string>
    <string name="Sensacióntérmica">Sensación térmica</string>
    <string name="TemperaturaMaxima">Temperatura Maxima</string>
    <string name="TemperaturaMinima">Temperatura Minima</string>
    <string name="ciudad">Ciudad</string>

    <string name="vaCargando">Cargando</string>
    <string name="Selecciontemperatura">Seleccionar como calcular temperatura</string>
    <string name="temperaturacelsius">Celsius</string>
    <string name="temperaturafaranght">Fahrenheit</string>
    <string name="temperaturakelvin">Kelvin </string>



</resources>